--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,18 @@
 version: '3.8'
 services:
-  backend: 
-    build: 
+  backend:
+    build:
       context: ./Backend
     ports:
       - "5058:5000"
+
   frontend:
     build:
-      context: ./Frontend
+      context: .
+      args:
+        - REACT_APP_BACKEND_URL=
     ports:
       - "3033:3000"
     environment:
-      REACT_APP_BACKEND_URL:
+      - REACT_APP_BACKEND_URL=
+
