--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "dgram": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
+    "ip": "^2.0.1",
     "node-ssdp": "^4.0.1",
     "path": "^0.12.7",
     "react": "^18.3.1",
